HHH-19879: Move Hibernate Tools' reveng module to Hibernate ORM and merge the relevant ant/gradle/maven plugins   - Add comprehensive unit tests for utility and data classes to improve SonarCloud coverage   - Test StringUtil, TableNameQualifier, NameConverter, JdbcToHibernateTypeHelper, AnnotationBuilder   - Test TableIdentifier, SQLTypeMapping, TableFilter (including Matcher inner class)   - Test HibernateMappingGlobalSettings, ImportContextImpl, Issue, HQLCompletionProposal
Signed-off-by: Koen Aers <koen.aers@gmail.com>